shell command update